--- a/src/Castle.ActiveRecord.Tests/App.config
+++ b/src/Castle.ActiveRecord.Tests/App.config
@@ -12,7 +12,7 @@
 			<add key="connection.driver_class" value="NHibernate.Driver.SqlClientDriver"/>
 			<add key="dialect" value="NHibernate.Dialect.MsSql2000Dialect"/>
 			<add key="connection.provider" value="NHibernate.Connection.DriverConnectionProvider"/>
-			<add key="connection.connection_string" value="Data Source=.;Initial Catalog=Test;Integrated Security=True"/>
+			<add key="connection.connection_string" value="Server=(local)\sqlexpress;initial catalog=test;Integrated Security=SSPI" />
 			<add key="proxyfactory.factory_class" value="NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle"/>
 			<add key="query.factory_class" value="NHibernate.Hql.Ast.ANTLR.ASTQueryTranslatorFactory, NHibernate"/>
 		</config>
@@ -21,7 +21,7 @@
 			<add key="connection.driver_class" value="NHibernate.Driver.SqlClientDriver"/>
 			<add key="dialect" value="NHibernate.Dialect.MsSql2000Dialect"/>
 			<add key="connection.provider" value="NHibernate.Connection.DriverConnectionProvider"/>
-			<add key="connection.connection_string" value="Data Source=.;Initial Catalog=Test2;Integrated Security=True"/>
+			<add key="connection.connection_string" value="Server=(local)\sqlexpress;initial catalog=test2;Integrated Security=SSPI" />
 			<add key="proxyfactory.factory_class" value="NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle"/>
 			<add key="query.factory_class" value="NHibernate.Hql.Ast.ANTLR.ASTQueryTranslatorFactory, NHibernate"/>
 		</config>
@@ -30,7 +30,7 @@
 			<add key="connection.driver_class" value="NHibernate.Driver.SqlClientDriver"/>
 			<add key="dialect" value="NHibernate.Dialect.MsSql2000Dialect"/>
 			<add key="connection.provider" value="NHibernate.Connection.DriverConnectionProvider"/>
-			<add key="connection.connection_string" value="Data Source=.;Initial Catalog=Test2;Integrated Security=True"/>
+			<add key="connection.connection_string" value="Server=(local)\sqlexpress;initial catalog=test2;Integrated Security=SSPI" />
 			<add key="proxyfactory.factory_class" value="NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle"/>
 			<add key="query.factory_class" value="NHibernate.Hql.Ast.ANTLR.ASTQueryTranslatorFactory, NHibernate"/>
 		</config>
@@ -39,7 +39,7 @@
 			<add key="connection.driver_class" value="NHibernate.Driver.SqlClientDriver"/>
 			<add key="dialect" value="NHibernate.Dialect.MsSql2000Dialect"/>
 			<add key="connection.provider" value="NHibernate.Connection.DriverConnectionProvider"/>
-			<add key="connection.connection_string" value="Data Source=.;Initial Catalog=Test2;Integrated Security=True"/>
+			<add key="connection.connection_string" value="Server=(local)\sqlexpress;initial catalog=test2;Integrated Security=SSPI" />
 			<add key="proxyfactory.factory_class" value="Castle.ActiveRecord.ByteCode.ProxyFactoryFactory, Castle.ActiveRecord"/>
 			<add key="query.factory_class" value="NHibernate.Hql.Ast.ANTLR.ASTQueryTranslatorFactory, NHibernate"/>
 		</config>
