--- a/src/Castle.ActiveRecord/Castle.ActiveRecord-vs2010.csproj
+++ b/src/Castle.ActiveRecord/Castle.ActiveRecord-vs2010.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Attributes\WithAccessAttribute.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ByteCode\LazyFieldInterceptor.cs" />
     <Compile Include="ByteCode\LazyInitializer.cs" />
     <Compile Include="ByteCode\ProxyFactory.cs" />
     <Compile Include="ByteCode\ProxyFactoryFactory.cs" />
