--- a/src/Castle.ActiveRecord.Tests/App.config
+++ b/src/Castle.ActiveRecord.Tests/App.config
@@ -41,6 +41,7 @@
 			<add key="connection.provider" value="NHibernate.Connection.DriverConnectionProvider"/>
 			<add key="connection.connection_string" value="Server=(local)\sqlexpress;initial catalog=test2;Integrated Security=SSPI" />
 			<add key="proxyfactory.factory_class" value="Castle.ActiveRecord.ByteCode.ProxyFactoryFactory, Castle.ActiveRecord"/>
+      <add key="collectiontype.factory_class" value="Castle.ActiveRecord.ByteCode.CollectionTypeFactory, Castle.ActiveRecord"/>
 			<add key="query.factory_class" value="NHibernate.Hql.Ast.ANTLR.ASTQueryTranslatorFactory, NHibernate"/>
 		</config>
 
