--- a/src/Castle.ActiveRecord.Tests/Castle.ActiveRecord.Tests-vs2010.csproj
+++ b/src/Castle.ActiveRecord.Tests/Castle.ActiveRecord.Tests-vs2010.csproj
@@ -175,6 +175,8 @@
     <Compile Include="Config\AspNet2.0ConfigurationIntegration.cs" />
     <Compile Include="Config\ConfigurationSource.cs" />
     <Compile Include="JoinedSubClassTestCase.cs" />
+    <Compile Include="Model\LazyObjectListTarget.cs" />
+    <Compile Include="Model\ObjectWithLazyList.cs" />
     <Compile Include="Model\GenericModel\Entity.cs" />
     <Compile Include="Model\GenericModel\SurveyAssociation.cs" />
     <Compile Include="Model\LazyObjectWithLazyBlobProperty.cs" />
