Modify config to use ActiveRecord ByteCode for all tests.
--HG--
branch : local_changes

--- a/src/Castle.ActiveRecord.Tests/App.config
+++ b/src/Castle.ActiveRecord.Tests/App.config
@@ -13,7 +13,8 @@
 			<add key="dialect" value="NHibernate.Dialect.MsSql2000Dialect"/>
 			<add key="connection.provider" value="NHibernate.Connection.DriverConnectionProvider"/>
 			<add key="connection.connection_string" value="Server=(local)\sqlexpress;initial catalog=test;Integrated Security=SSPI" />
-			<add key="proxyfactory.factory_class" value="NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle"/>
+      <add key="proxyfactory.factory_class" value="Castle.ActiveRecord.ByteCode.ProxyFactoryFactory, Castle.ActiveRecord"/>
+      <add key="collectiontype.factory_class" value="Castle.ActiveRecord.ByteCode.CollectionTypeFactory, Castle.ActiveRecord"/>
 			<add key="query.factory_class" value="NHibernate.Hql.Ast.ANTLR.ASTQueryTranslatorFactory, NHibernate"/>
 		</config>
 
@@ -22,7 +23,8 @@
 			<add key="dialect" value="NHibernate.Dialect.MsSql2000Dialect"/>
 			<add key="connection.provider" value="NHibernate.Connection.DriverConnectionProvider"/>
 			<add key="connection.connection_string" value="Server=(local)\sqlexpress;initial catalog=test2;Integrated Security=SSPI" />
-			<add key="proxyfactory.factory_class" value="NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle"/>
+      <add key="proxyfactory.factory_class" value="Castle.ActiveRecord.ByteCode.ProxyFactoryFactory, Castle.ActiveRecord"/>
+      <add key="collectiontype.factory_class" value="Castle.ActiveRecord.ByteCode.CollectionTypeFactory, Castle.ActiveRecord"/>
 			<add key="query.factory_class" value="NHibernate.Hql.Ast.ANTLR.ASTQueryTranslatorFactory, NHibernate"/>
 		</config>
 
@@ -31,7 +33,8 @@
 			<add key="dialect" value="NHibernate.Dialect.MsSql2000Dialect"/>
 			<add key="connection.provider" value="NHibernate.Connection.DriverConnectionProvider"/>
 			<add key="connection.connection_string" value="Server=(local)\sqlexpress;initial catalog=test2;Integrated Security=SSPI" />
-			<add key="proxyfactory.factory_class" value="NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle"/>
+      <add key="proxyfactory.factory_class" value="Castle.ActiveRecord.ByteCode.ProxyFactoryFactory, Castle.ActiveRecord"/>
+      <add key="collectiontype.factory_class" value="Castle.ActiveRecord.ByteCode.CollectionTypeFactory, Castle.ActiveRecord"/>
 			<add key="query.factory_class" value="NHibernate.Hql.Ast.ANTLR.ASTQueryTranslatorFactory, NHibernate"/>
 		</config>
 		
