--- a/src/Castle.ActiveRecord.Tests/App-net-3.5.config
+++ b/src/Castle.ActiveRecord.Tests/App-net-3.5.config
@@ -28,7 +28,8 @@
 			<add key="dialect"                 value="NHibernate.Dialect.MSSql2005Dialect" />
 			<add key="connection.provider"     value="NHibernate.Connection.DriverConnectionProvider" />
 			<add key="connection.connection_string" value="Server=(local)\sqlexpress;initial catalog=test;Integrated Security=SSPI" />
-			<add key="proxyfactory.factory_class" value="NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle" />
+      <add key="proxyfactory.factory_class" value="Castle.ActiveRecord.ByteCode.ProxyFactoryFactory, Castle.ActiveRecord"/>
+      <add key="collectiontype.factory_class" value="Castle.ActiveRecord.ByteCode.CollectionTypeFactory, Castle.ActiveRecord"/>
 			<add key="query.factory_class" value="NHibernate.Hql.Ast.ANTLR.ASTQueryTranslatorFactory, NHibernate" />
 		</config>
 
@@ -37,7 +38,8 @@
 			<add key="dialect"                 value="NHibernate.Dialect.MSSql2005Dialect" />
 			<add key="connection.provider"     value="NHibernate.Connection.DriverConnectionProvider" />
 			<add key="connection.connection_string" value="Server=(local)\sqlexpress;initial catalog=test2;Integrated Security=SSPI" />
-			<add key="proxyfactory.factory_class" value="NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle" />
+      <add key="proxyfactory.factory_class" value="Castle.ActiveRecord.ByteCode.ProxyFactoryFactory, Castle.ActiveRecord"/>
+      <add key="collectiontype.factory_class" value="Castle.ActiveRecord.ByteCode.CollectionTypeFactory, Castle.ActiveRecord"/>
 			<add key="query.factory_class" value="NHibernate.Hql.Ast.ANTLR.ASTQueryTranslatorFactory, NHibernate" />
 		</config>
 
@@ -46,7 +48,8 @@
 			<add key="dialect"                 value="NHibernate.Dialect.MSSql2005Dialect" />
 			<add key="connection.provider"     value="NHibernate.Connection.DriverConnectionProvider" />
 			<add key="connection.connection_string" value="Server=(local)\sqlexpress;initial catalog=test2;Integrated Security=SSPI" />
-			<add key="proxyfactory.factory_class" value="NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle" />
+      <add key="proxyfactory.factory_class" value="Castle.ActiveRecord.ByteCode.ProxyFactoryFactory, Castle.ActiveRecord"/>
+      <add key="collectiontype.factory_class" value="Castle.ActiveRecord.ByteCode.CollectionTypeFactory, Castle.ActiveRecord"/>
 			<add key="query.factory_class" value="NHibernate.Hql.Ast.ANTLR.ASTQueryTranslatorFactory, NHibernate" />
 		</config>
 		
