Add custom linq query provider
--HG--
branch : local_changes

--- a/src/Castle.ActiveRecord/Castle.ActiveRecord-vs2010.csproj
+++ b/src/Castle.ActiveRecord/Castle.ActiveRecord-vs2010.csproj
@@ -262,6 +262,7 @@
     <Compile Include="Framework\ActiveRecordValidationBase.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Framework\ARQueryProvider.cs" />
     <Compile Include="Framework\Config\ActiveRecordSectionHandler.cs">
       <SubType>Code</SubType>
     </Compile>
